--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links
 main:
-  # - title: "Malware Analysis"
-  #  url: /categories/#Malware-Analysis
+   - title: "Malware Analysis"
+     url: /categories/#Malware-Analysis
   # - title: "Sample Posts"
   #   url: /year-archive/
   # - title: "Sample Collections"
