--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ locale                   : "en-US"
 title                    : "The Last Bytes Bender"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
-name                     : "Thomas Andreatta"
+name                     : "Andreatta - @WGrizzly"
 description              : "Cybersecurity - Malware Analysis"
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
@@ -93,7 +93,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Thomas Andreatta"
+  name             : "Andreatta - @WGrizzly"
   avatar           : /assets/images/site_data/avatar.png # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Cybersecurity researcher & Malware Analyst"
 
