--- a/_config.yml
+++ b/_config.yml
@@ -95,7 +95,7 @@ analytics:
 author:
   name             : "Andreatta - @WGrizzly"
   avatar           : /assets/images/site_data/avatar.png # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "Cybersecurity researcher & Malware Analyst"
+  bio              : "Cybersecurity - Malware Analysis - Kernel development - Other low level stuff"
 
   email            :
   links:
